--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,17 @@
             <artifactId>jna</artifactId>
             <version>5.5.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.relevantcodes</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>2.41.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.0</version>
+        </dependency>
 
 
     </dependencies>
