add run from cmd options

--- a/test.properties
+++ b/test.properties
@@ -1,4 +1,7 @@
 TEST_NAME=IncreasingCPULoadLvl1
 FRAMEWORK=aws
+AWS_DEFAULT_REGION="eu-west-1"
+AWS_ACCESS_KEY_ID=AKIATM27G7R7VDZ3DCNY
+AWS_SECRET_ACCESS_KEY=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
 COMPARABLE_RESULT_FILE_PATH=/home/yudix/IdeaProjects/faasbenchmark/old/results_20200204092216/IncreasingCPULoadLvl1/aws/result.json
 PROJECT_FAASBENCHMARK_PATH=/home/yudix/IdeaProjects/faasbenchmark
